# Wireframe-Renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  STYLE.md
apps/parser/: CMakeLists.txt  main.cpp
apps/transform/: CMakeLists.txt  main.cpp
include/: ObjParser.hpp  RendererConfig.hpp.in  TransformParser.hpp
scripts/: build.sh  run.sh
src/: ObjParser.cpp  TransformParser.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
